aligned the main element and fixed the footer.

--- a/Style/main.css
+++ b/Style/main.css
@@ -45,6 +45,10 @@ body {
     }
 }
 
+main {
+    width: 100%;
+}
+
 a {
     text-decoration: none;
 }
@@ -57,6 +61,7 @@ a:hover{
     display: flex;
     flex-direction: column;
     width: 67.5rem;
+    margin: 0 auto;
 }
 
 @media (max-width: 768px){
@@ -450,6 +455,7 @@ aside p {
     width: 100%;
     align-items: center;
     margin-top: 2rem;
+    justify-content: center;
 }
 
 @media (max-width: 768px){
@@ -522,7 +528,7 @@ aside p {
 .footer-sm {
     display: flex;
     align-items: center;
-    margin: 0 3rem 0 20rem;
+    margin: 0 3rem 0 30rem;
 }
 
 @media (max-width: 768px){
